> Fixes gamertag overflow for stats

--- a/src/components/stat/Stat.styl
+++ b/src/components/stat/Stat.styl
@@ -10,7 +10,9 @@
   font-size small
   line-height 1
   text-transform uppercase
+  overflow hidden
   padding 0 0 0.1em
+  text-overflow ellipsis
 
   +width-min($mq--tablet)
     font-size smaller
